--- a/Naive_Bayes_.ipynb
+++ b/Naive_Bayes_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMir+9Qq6BB1TCh95AumbC3",
+      "authorship_tag": "ABX9TyN2Zjovdmy0RdRwvEETuCjE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/slmsshk/Data_Science-_Dummy/blob/main/Naive_Bayes_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Naive Bayes"
+      ],
+      "metadata": {
+        "id": "hLK3-IH1ixBf"
+      }
     },
     {
       "cell_type": "code",
@@ -205,7 +214,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Aproach 1"
+        "### Aproach 1"
       ],
       "metadata": {
         "id": "NWPv_GIOe1LD"
@@ -1789,7 +1798,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Approach 2"
+        "### Approach 2"
       ],
       "metadata": {
         "id": "gFXVzBtBe_ub"
