--- a/Convolutional Neural Networks.ipynb
+++ b/Convolutional Neural Networks.ipynb
@@ -28,6 +28,8 @@
    "source": [
     "#load data\n",
     "from keras.datasets import fashion_mnist\n",
+    "\n",
+    "x_tr,x_tst,y_tr,y_tst=train_test_split(test_size=.20,random_shuffle=True,random_state=20)\n",
     "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()"
    ]
   },
