--- a/Playground Sept..ipynb
+++ b/Playground Sept..ipynb
@@ -1488,13 +1488,7 @@
       "[662]\tvalidation_0-rmse:9.93027\tvalidation_0-mean_absolute_error:6.76255\n",
       "[663]\tvalidation_0-rmse:9.92860\tvalidation_0-mean_absolute_error:6.76103\n",
       "[664]\tvalidation_0-rmse:9.92493\tvalidation_0-mean_absolute_error:6.75863\n",
-      "[665]\tvalidation_0-rmse:9.92307\tvalidation_0-mean_absolute_error:6.75678\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[665]\tvalidation_0-rmse:9.92307\tvalidation_0-mean_absolute_error:6.75678\n",
       "[666]\tvalidation_0-rmse:9.92245\tvalidation_0-mean_absolute_error:6.75624\n",
       "[667]\tvalidation_0-rmse:9.92166\tvalidation_0-mean_absolute_error:6.75520\n",
       "[668]\tvalidation_0-rmse:9.92150\tvalidation_0-mean_absolute_error:6.75481\n",
@@ -2301,7 +2295,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "d049537a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -2318,7 +2314,7 @@
     }
    ],
    "source": [
-    "pred=pd.DataFrame(xgb.predict(test),columns=['row_id','date','country','store','product','num_sold'])"
+    "pred=pd.DataFrame(xgb.predict(test))"
    ]
   },
   {
